[metadata]
name = blazar-nova
summary = Nova related filters and extensions for Blazar
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    Framework :: Setuptools Plugin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home-page = https://launchpad.net/blazar

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    blazarnova
