[metadata]
name = blazar-nova
summary = Nova related filters and extensions for Blazar
description_file = README.rst
license = Apache Software License
python_requires = >=3.10
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    Framework :: Setuptools Plugin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://launchpad.net/blazar

[global]
setup_hooks = pbr.hooks.setup_hook

[files]
packages =
    blazarnova
